force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Date_of_Birth__c</fullName>
    <inlineHelpText>If not known exactly, enter 01/01/YYYY for year only age.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>