force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>