force-app/main/default/objects/MUSW__Animal__c/fields/MUSW__Spayed_Neutered__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Spayed_Neutered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spayed/Neutered</label>
    <type>Checkbox</type>
</CustomField>